# FastNeurons

./: .gitignore  CMakeLists.txt  README.md  cnn-par  cnn-seq  cnn.cu  configure.bat  lenet.cpp  lenet.h  main.cu  makefile  measurements.txt  repeat.sh
lenet/: LeNet-5.vcxproj  lenet copy.c  lenet.c  lenet.h  main.c
source/: CMakeLists.txt  cnn.cu  cnn.h
test/: CMakeLists.txt  dataset.txt  test.cpp
